# bayesopt_reranking

./: .gitignore  README.md  pyproject.toml
efficient_reranking/lib/: datasets.py  utils.py
efficient_reranking/runtime_scripts/: generate_cands.py  generate_cands_no_hidden.py  get_runtime.py  get_runtime_baseline.py  get_runtime_comet_calls.py  get_runtime_generate_cands.py  get_runtime_multi_fid.py  get_runtime_scores_bandit.py  get_runtime_similarities.py  get_runtime_simple_gp_bandit.py  get_sample_data.py  h5d_generate_candidates.py  h5d_get_similarities.py  h5d_run_simple_gp_bandit.py  h5d_score_comet.py
efficient_reranking/scripts/: README.md  generate_candidates.py  get_logprobs.py  get_similarities.py  run_multi_fidelity_bayes_opt.py  run_mv_gaussian.py  run_simple_gp_bandit.py  score_comet.py  score_comet_layerwise.py  z_generate_cands.py  z_get_runtime.py  z_get_sample_data.py  z_get_shortest_data.py
experiments_figures/: 20a-plot_baseline.py  20b-plot_batch_size.py  20d-plot_multi_proxy.py  20e-plot_multi_proxy_cost.py  23-compute_h5_corr.py  31-baselines_simulation.py
experiments_small_comet/: README.md
experiments_small_comet/scripts/: 01d-find_max_batch_size.py  02-jsonl_to_csv.py  03a-translate_mt.py  03b-submit_translate_mt.sh  03c-score_comet.py  03e-resave.py  04a-train_riem.sh  04b-train_bogan.sh  04c-train_skintle.sh  05-eval_comet.py  utils.sh
oplatek/: README.md
oplatek/scripts/: 00-sync-cluster-data-to-local.sh  00-sync.sh  01c-train_head.sh  03-train.sh  finetune_cometkiwi.sh  utils.sh
vilem/: .gitignore  README.md
(+54 files in other folders)
