[tool.poetry]
name = "efficient_reranking"
version = "0.1.0"
description = ""
authors = ["Julius Cheng, Ondřej Plátek, Vilém Zouhar, Maike Züfle"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "4.35.2"
datasets = "^2.19.1"
sacremoses = "^0.1.1"
h5py = "^3.11.0"
numpy = "^1.26.4"
unbabel-comet = "^2.2.2"
torch = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
